Add Better info system

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -9,6 +9,7 @@
 	
 	<string name="regOkTitle">Votre compte a été validé</string>
 	<string name="regOkSummary">Votre compte est valide, vous pouvez désormais récupérer les info sur le site  : </string>
+	<string name="regOkSummary2"> avec l\'adresse mail : </string>
 	<string name="adminRights">L\'application a besoin de droits administrateurs pour fonctionner</string>
 	<!-- Preferences -->
 	<string name="prefConfGeneral">Configuration Générale</string>
