--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,7 @@
 	
 	<string name="regOkTitle">Registration OK</string>
 	<string name="regOkSummary">Your registration is valid, you are now be able to get info from your phone from this url : </string>
+	<string name="regOkSummary2"> with the mail account : </string>
 	<string name="adminRights">Need some administrators right to make this software works</string>
 	<!-- Preferences -->
 	<string name="prefConfGeneral">General</string>
